--- a/shop/templates/shop/developer_base.html
+++ b/shop/templates/shop/developer_base.html
@@ -7,7 +7,6 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'shop/bulma-0.6.2/css/bulma.css' %}"/>
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    {#    <link rel="stylesheet" type="text/css" href="{% static 'shop/main.css' %}"/>#}
     <link rel="stylesheet" type="text/css" href="{% static 'shop/catalog.css' %}"/>
 </head>
 <body>
@@ -24,37 +23,30 @@
             <span></span>
         </div>
     </div>
-    <div class="navbar-end">
-        <div class="navbar-item">
-           
 
-        </div>
-        <div class="navbar-item">
-            <div id="navMenu" class="navbar-menu">
+     <div class="navbar-end">
+         <div class="navbar-item">
+             <div id="navMenu" class="navbar-menu">
                 <div class="navbar" style="min-height: 1.25rem;">
                     <div class="navbar-item has-dropdown is-hoverable is-mobile">
                         <a class="navbar-link">
                             Menu
                         </a>
                         <div class="navbar-dropdown is-boxed">
-                            <a class="navbar-item" href="{% url 'shop:catalog' %}">
-                                Catalog
-                            </a>
-                            <a class="navbar-item" href="{% url 'shop:logout' %}">
-                                Logout
-                            </a>
+                            <a class="navbar-item" href="{% url 'shop:developer_games' %}">Inventory</a>
+                             <a class="navbar-item" href="{% url 'shop:publish' %}">Publish</a>
+                            <a class="navbar-item" href="{% url 'shop:logout' %}">Logout</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="navbar-item">
+         </div>
+          <div class="navbar-item">
 
-        </div>
-
-    </div>
-
+         </div>
+     </div>
 </nav>
+
 <section class="section">
     <div class="container">
         {% block content %}{% endblock content %}
