Developer can edit the Game

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% block content %}
     <h1 class="title">
-        The world of gamers is here!
+        Here is the games you have purchased!
     </h1>
 
     {% for game in games %}
